--- a/rootdir/etc/init.xiaomi.series.rc
+++ b/rootdir/etc/init.xiaomi.series.rc
@@ -4,6 +4,11 @@ service vendor.xiaomi_series_script /vendor/bin/init.xiaomi.series.sh
     group root
     oneshot
 
+# Kernel modules
+on early-init
+    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules msm_kgsl_core msm_adreno wlan
+    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules audio_apr audio_adsp_loader audio_q6_notifier audio_q6 audio_usf audio_native audio_pinctrl_wcd audio_swr audio_platform audio_swr_ctrl audio_hdmi audio_wcd9xxx audio_wcd_core audio_wsa881x_analog audio_wsa881x audio_mbhc audio_stub audio_digital_cdc audio_analog_cdc audio_wcd_cpe audio_cpe_lsm audio_wcd9335 audio_machine_sdm450 audio_machine_ext_sdm450
+
 # Sensors
 service vendor-sensor-sh /vendor/bin/init.qcom.sensors.sh
     override
